ajuste estable composer

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
             "DevQuick\\MonitorClient\\": "src/"
         }
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "license": "MIT"
 }
