--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,10 @@
     "type": "library",
     "require": {
         "php": "^7.3|^8.0",
-        "monolog/monolog": "^2.0",
-        "cboden/ratchet": "^0.4.0",
-        "firebase/php-jwt": "^5.4"
+        "monolog/monolog": "^2.0 || ^3.0",
+        "firebase/php-jwt": "^6.0",
+        "ratchet/pawl": "^1.0",
+        "react/event-loop": "^1.0"
     },
     "autoload": {
         "psr-4": {
