install package guzzle

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "php": "^7.3|^8.0",
         "firebase/php-jwt": "^6.0",
         "ratchet/pawl": "0.4.1", 
-        "react/event-loop": "^1.0"
+        "react/event-loop": "^1.0",
+        "guzzlehttp/guzzle": "^7.9"
     },
     "autoload": {
         "psr-4": {
